feat - language: language fn fix

--- a/lib/l10n/app_bn.arb
+++ b/lib/l10n/app_bn.arb
@@ -1,7 +1,311 @@
 {
   "@@locale": "bn",
-  "complaintsList": "কদস্েোরি োরেিক",
-  "@complaintsList": {
-    "description": ""
-  }
+
+  "acNotWorkingProperly": "এসি সঠিকভাবে কাজ করছে না",
+  "accept": "গ্রহণ করুন",
+  "acceptDeclinedComplaint": "প্রত্যাখ্যান করা অভিযোগ গ্রহণ করুন",
+  "acceptFunctionalityComingSoon": "গ্রহণ করার কার্যকারিতা শীঘ্রই আসছে",
+  "acceptTechnician": "টেকনিশিয়ান গ্রহণ করুন",
+  "acceptTechnicianCubitErrorError": "টেকনিশিয়ান গ্রহণে ত্রুটি: {error}",
+  "acceptedSchedule": "গ্রহণ করা সময়সূচী",
+  "acceptedSchedule_1": "গ্রহণ করা সময়সূচী",
+  "account": "অ্যাকাউন্ট",
+  "active": "সক্রিয়",
+  "addPhotos": "ছবি যোগ করুন",
+  "additionalInformation": "অতিরিক্ত তথ্য",
+  "admin": "অ্যাডমিন",
+  "agencyId": "এজেন্সি আইডি",
+  "agent": "এজেন্ট",
+  "approvalFailed": "অনুমোদন ব্যর্থ হয়েছে",
+  "approve": "অনুমোদন করুন",
+  "approveComment": "মন্তব্য অনুমোদন করুন",
+  "approved": "অনুমোদিত",
+  "apr": "এপ্রিল",
+  "ar": "আরবি",
+  "areYouSureYouWantToLogOutOfYourAccount": "আপনি কি নিশ্চিত যে আপনি আপনার অ্যাকাউন্ট থেকে লগ আউট করতে চান?",
+  "assignedTechnician": "নির্ধারিত টেকনিশিয়ান",
+  "attachImages": "ছবি সংযুক্ত করুন",
+  "aug": "আগস্ট",
+  "beSpecificAboutTheIssueForFasterResolution": "দ্রুত সমাধানের জন্য সমস্যা সম্পর্কে সুনির্দিষ্ট হোন",
+  "camera": "ক্যামেরা",
+  "cancel": "বাতিল করুন",
+  "cancel_1": "বাতিল",
+  "cannotCompleteDeclinedComplaintsPleaseReconsiderFirst": "প্রত্যাখ্যান করা অভিযোগ সম্পূর্ণ করা যাবে না। অনুগ্রহ করে প্রথমে পুনর্বিবেচনা করুন।",
+  "cannotEditSolvedComplaints": "সমাধান করা অভিযোগ সম্পাদনা করা যাবে না",
+  "cannotFetchComplaintsTenantidIsNullOrEmpty": "অভিযোগগুলি আনতে ব্যর্থ: টেন্যান্ট আইডি শূন্য বা খালি",
+  "cannotRescheduleSolvedComplaints": "সমাধান করা অভিযোগ পুনরায় সময়সূচী করা যাবে না",
+  "cannotResubmitSolvedComplaints": "সমাধান করা অভিযোগ পুনরায় জমা দেওয়া যাবে না",
+  "chooseFromGallery": "গ্যালারি থেকে নির্বাচন করুন",
+  "clearAll": "সব পরিষ্কার করুন",
+  "close": "বন্ধ করুন",
+  "code": "কোড",
+  "comment": "মন্তব্য",
+  "commentIsRequired": "মন্তব্য প্রয়োজন",
+  "commentText": "মন্তব্য লিখুন...",
+  "complainImagesErrorError": "অভিযোগের ছবিতে ত্রুটি: {error}",
+  "complaintApprovedSuccessfully": "অভিযোগ সফলভাবে অনুমোদিত হয়েছে",
+  "complaintCreated": "অভিযোগ তৈরি হয়েছে",
+  "complaintDeclined": "অভিযোগ প্রত্যাখ্যান করা হয়েছে",
+  "complaintDeclinedSuccessfully": "অভিযোগ সফলভাবে প্রত্যাখ্যান করা হয়েছে",
+  "complaintDetails": "অভিযোগের বিবরণ",
+  "complaintHistory": "অভিযোগের ইতিহাস",
+  "complaintIsAlreadyAcceptedAndSolved": "অভিযোগ ইতিমধ্যে গ্রহণ করা হয়েছে এবং সমাধান করা হয়েছে",
+  "complaintIsAlreadyCompleted": "অভিযোগ ইতিমধ্যে সম্পন্ন হয়েছে",
+  "complaintMarkedAsComplete": "অভিযোগ সম্পূর্ণ হিসাবে চিহ্নিত করা হয়েছে",
+  "complaintResolved": "অভিযোগ সমাধান করা হয়েছে",
+  "complaintResubmitted": "অভিযোগ পুনরায় জমা দেওয়া হয়েছে",
+  "complaintSubmittedSuccessfully": "অভিযোগ সফলভাবে জমা দেওয়া হয়েছে",
+  "complaintsList": "অভিযোগের তালিকা",
+  "complete": "সম্পূর্ণ করুন",
+  "completeFunctionalityComingSoon": "সম্পূর্ণ করার কার্যকারিতা শীঘ্রই আসছে",
+  "completed": "সম্পন্ন",
+  "completed_1": "সম্পন্ন",
+  "confirmLogout": "লগআউট নিশ্চিত করুন",
+  "contactInformation": "যোগাযোগের তথ্য",
+  "couldNotInitiateCallE": "কল শুরু করতে ব্যর্থ: {e}",
+  "createComplaint": "অভিযোগ তৈরি করুন",
+  "cubitCalled": "কিউবিট কল করা হয়েছে",
+  "cubitCatchBlockCalled": "কিউবিট: ক্যাচ ব্লক কল করা হয়েছে",
+  "cubitCatchBlockCalled_1": "কিউবিট: ক্যাচ ব্লক কল করা হয়েছে",
+  "decline": "প্রত্যাখ্যান করুন",
+  "declineComment": "মন্তব্য প্রত্যাখ্যান করুন",
+  "declineReason": "প্রত্যাখ্যানের কারণ",
+  "declineRequestFailed": "প্রত্যাখ্যানের অনুরোধ ব্যর্থ হয়েছে",
+  "declined": "প্রত্যাখ্যান করা হয়েছে",
+  "declinedComplaintAction": "প্রত্যাখ্যান করা অভিযোগের কর্ম",
+  "declinedComplaints": "প্রত্যাখ্যান করা অভিযোগ",
+  "declinedList": "প্রত্যাখ্যান করা তালিকা",
+  "declined_1": "প্রত্যাখ্যান করা হয়েছে",
+  "description": "বিবরণ",
+  "descriptionIsRequired": "বিবরণ প্রয়োজন",
+  "detailedErrorError": "বিস্তারিত ত্রুটি: {error}",
+  "deutsch": "জার্মান",
+  "doYouWantToReconsiderAndAcceptThisComplaint": "আপনি কি এই অভিযোগটি পুনর্বিবেচনা এবং গ্রহণ করতে চান?",
+  "doYouWantToReconsiderThisComplaintAndScheduleIt": "আপনি কি এই অভিযোগটি পুনর্বিবেচনা এবং সময়সূচী করতে চান?",
+  "edit": "সম্পাদনা করুন",
+  "editComplainCubitErrorFailure": "অভিযোগ সম্পাদনে ত্রুটি: {failure}",
+  "editDeclinedComplaint": "প্রত্যাখ্যান করা অভিযোগ সম্পাদনা করুন",
+  "editFunctionalityForLandlordComingSoon": "মালিকের জন্য সম্পাদনা কার্যকারিতা শীঘ্রই আসছে",
+  "email": "ইমেইল",
+  "email_1": "ইমেইল:",
+  "en": "ইংরেজি",
+  "english": "ইংরেজি",
+  "enterTextHere": "এখানে টেক্সট লিখুন...",
+  "errorFetchingUserTypeE": "ব্যবহারকারীর ধরন আনতে ত্রুটি: {e}",
+  "errorFormattingOriginalDateE": "মূল তারিখ ফরম্যাট করতে ত্রুটি: {e}",
+  "errorLoadingUserInfoE": "ব্যবহারকারীর তথ্য লোড করতে ত্রুটি: {e}",
+  "es": "স্প্যানিশ",
+  "espaOl": "স্প্যানিশ",
+  "failedToDetermineUserTypePleaseTryLoggingInAgain": "ব্যবহারকারীর ধরন নির্ধারণ করতে ব্যর্থ হয়েছে। অনুগ্রহ করে আবার লগইন করুন।",
+  "failedToGetUserTypeE": "ব্যবহারকারীর ধরন পেতে ব্যর্থ: {e}",
+  "failedToLoadTechnicianInformation": "টেকনিশিয়ানের তথ্য লোড করতে ব্যর্থ হয়েছে",
+  "failedToPrepareSubmissionE": "জমা দেওয়ার প্রস্তুতি নিতে ব্যর্থ: {e}",
+  "feb": "ফেব্রুয়ারি",
+  "feedbackIsRequired": "ফিডব্যাক প্রয়োজন",
+  "flag": "পতাকা",
+  "forgotPassword": "পাসওয়ার্ড ভুলে গেছেন?",
+  "fr": "ফরাসি",
+  "franAis": "ফরাসি",
+  "gallery": "গ্যালারি",
+  "gettingTechnicianInfo": "টেকনিশিয়ানের তথ্য পাওয়া হচ্ছে...",
+  "gettingTechnicianInfo_1": "টেকনিশিয়ানের তথ্য পাওয়া হচ্ছে...",
+  "hi": "হিন্দি",
+  "history": "ইতিহাস",
+  "historyCubitErrorError": "ইতিহাস কিউবিট ত্রুটি: {error}",
+  "holdOnBringingEverythingTogether": "অপেক্ষা করুন, সবকিছু একত্রিত করা হচ্ছে...",
+  "holdOnGettingHistory": "অপেক্ষা করুন, ইতিহাস পাওয়া হচ্ছে...",
+  "home": "হোম",
+  "imageGalleryComplaintImagecount": "ছবির গ্যালারি ({imageCount})",
+  "imageLoadingCancelled": "ছবি লোডিং বাতিল করা হয়েছে",
+  "inProgress": "চলমান",
+  "inactive": "নিষ্ক্রিয়",
+  "initialImages": "প্রাথমিক ছবি",
+  "invalidTime": "অবৈধ সময়",
+  "issueList": "সমস্যার তালিকা",
+  "it": "ইতালিয়ান",
+  "italiano": "ইতালিয়ান",
+  "jan": "জানুয়ারি",
+  "jul": "জুলাই",
+  "jun": "জুন",
+  "kitchenCabinetRepair": "রান্নাঘরের ক্যাবিনেট মেরামত",
+  "landlord": "মালিক",
+  "landlordDashboard_1": "মালিকের ড্যাশবোর্ড",
+  "landlordId": "মালিকের আইডি",
+  "landlordInformation": "মালিকের তথ্য",
+  "landlordName": "মালিকের নাম",
+  "landlord_1": "মালিক",
+  "landlordidIsNullOrEmptyCannotFetchComplaints": "মালিকের আইডি শূন্য বা খালি, অভিযোগ আনতে ব্যর্থ",
+  "language": "ভাষা",
+  "lastComment": "সর্বশেষ মন্তব্য",
+  "lastCommentDetails": "সর্বশেষ মন্তব্যের বিবরণ",
+  "lastComments": "সর্বশেষ মন্তব্যগুলি",
+  "loading": "লোড হচ্ছে...",
+  "loadingComplaints": "অভিযোগ লোড হচ্ছে...",
+  "loadingDeclinedComplaints": "প্রত্যাখ্যান করা অভিযোগ লোড হচ্ছে...",
+  "loadingImages": "ছবি লোড হচ্ছে...",
+  "loadingPendingComplaints": "মুলতুবি অভিযোগ লোড হচ্ছে...",
+  "loadingSolvedComplaints": "সমাধান করা অভিযোগ লোড হচ্ছে...",
+  "loadingUserInfo": "ব্যবহারকারীর তথ্য লোড হচ্ছে...",
+  "login": "লগইন",
+  "loginInProgress": "লগইন চলছে...",
+  "loginSuccessful": "লগইন সফল!",
+  "loginSuccessfulButFailedToLoadDashboardE": "লগইন সফল কিন্তু ড্যাশবোর্ড লোড করতে ব্যর্থ: {e}",
+  "loginSuccessfulFetchingUserType": "লগইন সফল - ব্যবহারকারীর ধরন পাওয়া হচ্ছে",
+  "logout": "লগআউট",
+  "mailto": "মেইল টু:",
+  "maintenanceScheduled": "রক্ষণাবেক্ষণের সময়সূচী",
+  "mar": "মার্চ",
+  "markAsComplete": "সম্পূর্ণ হিসাবে চিহ্নিত করুন",
+  "may": "মে",
+  "nA": "প্রযোজ্য নয়",
+  "name": "নাম",
+  "navigatingToLandlordDashboard": "মালিকের ড্যাশবোর্ডে নেভিগেট করা হচ্ছে",
+  "navigatingToTenantDashboard": "ভাড়াটিয়ার ড্যাশবোর্ডে নেভিগেট করা হচ্ছে",
+  "newComplaint": "নতুন অভিযোগ",
+  "noCategoriesAvailable": "কোন বিভাগ পাওয়া যায়নি",
+  "noComments": "কোন মন্তব্য নেই",
+  "noCommentsAvailable": "কোন মন্তব্য পাওয়া যায়নি",
+  "noCommentsYet": "এখনও কোন মন্তব্য নেই",
+  "noComplaintsToShow": "দেখানোর জন্য কোন অভিযোগ নেই",
+  "noDeclineReasonProvided": "প্রত্যাখ্যানের কোন কারণ দেওয়া হয়নি",
+  "noDeclinedComplaintsToShow": "দেখানোর জন্য কোন প্রত্যাখ্যান করা অভিযোগ নেই",
+  "noDetailsProvided": "কোন বিবরণ দেওয়া হয়নি।",
+  "noHistoryRecordsFound": "কোন ইতিহাস রেকর্ড পাওয়া যায়নি",
+  "noOptionsAvailable": "কোন বিকল্প পাওয়া যায়নি",
+  "noPendingComplaintsToShow": "দেখানোর জন্য কোন মুলতুবি অভিযোগ নেই",
+  "noResolutionCommentsAvailable": "সমাধানের কোন মন্তব্য পাওয়া যায়নি",
+  "noSegment": "কোন বিভাগ নেই",
+  "noSegmentsAvailable": "কোন বিভাগ পাওয়া যায়নি",
+  "noSolvedComplaintsToShow": "দেখানোর জন্য কোন সমাধান করা অভিযোগ নেই",
+  "notProvided": "প্রদান করা হয়নি",
+  "nov": "নভেম্বর",
+  "numberNd": "{number}য়",
+  "numberRd": "{number}য়",
+  "numberSt": "{number}ম",
+  "numberTh": "{number}তম",
+  "oct": "অক্টোবর",
+  "onlyAddedImagestoaddLengthImagesMaximumLimitReached": "শুধুমাত্র {length}টি ছবি যোগ করা হয়েছে। সর্বাধিক সীমা reached.",
+  "page": "{page}",
+  "password": "পাসওয়ার্ড",
+  "pending": "মুলতুবি",
+  "pendingComplaints": "মুলতুবি অভিযোগ",
+  "pending_1": "মুলতুবি",
+  "phone": "ফোন",
+  "phone_1": "ফোন:",
+  "pleaseCheckYourConnectionAndTryAgain": "আপনার সংযোগ পরীক্ষা করুন এবং আবার চেষ্টা করুন।",
+  "pleaseEnterBothUsernameAndPassword": "অনুগ্রহ করে ব্যবহারকারীর নাম এবং পাসওয়ার্ড উভয়ই লিখুন",
+  "pleaseEnterYourPassword": "আপনার পাসওয়ার্ড লিখুন",
+  "pleaseEnterYourUsername": "আপনার ব্যবহারকারীর নাম লিখুন",
+  "pleaseFillAllRequiredFields": "অনুগ্রহ করে সমস্ত প্রয়োজনীয় ক্ষেত্র পূরণ করুন",
+  "pleaseProvideYourFeedback": "অনুগ্রহ করে আপনার মতামত প্রদান করুন",
+  "pleaseSelectASegment": "অনুগ্রহ করে একটি বিভাগ নির্বাচন করুন",
+  "pleaseSelectASegment_1": "অনুগ্রহ করে একটি বিভাগ নির্বাচন করুন",
+  "pleaseWriteAComment": "অনুগ্রহ করে একটি মন্তব্য লিখুন",
+  "portuguS": "পর্তুগিজ",
+  "preparing": "প্রস্তুত করা হচ্ছে...",
+  "proMatrixNeedsInternetConnection": "প্রো ম্যাট্রিক্সের জন্য ইন্টারনেট সংযোগ প্রয়োজন",
+  "problem": "সমস্যা",
+  "profile": "প্রোফাইল",
+  "profileScreen": "/প্রোফাইল-স্ক্রিন",
+  "propertyId": "সম্পত্তির আইডি",
+  "propertyName": "সম্পত্তির নাম",
+  "propertyOwner": "সম্পত্তির মালিক",
+  "pt": "পর্তুগিজ",
+  "quickActions": "দ্রুত কর্ম",
+  "readLess": "কম পড়ুন",
+  "readMore": "আরও পড়ুন",
+  "recentActivity": "সাম্প্রতিক কার্যকলাপ",
+  "recomplainCubitErrorFailure": "পুনরায় অভিযোগ কিউবিট ত্রুটি: {failure}",
+  "reconsider": "পুনর্বিবেচনা করুন",
+  "reconsiderAccept": "পুনর্বিবেচনা করুন এবং গ্রহণ করুন",
+  "reconsiderFunctionalityComingSoon": "পুনর্বিবেচনা কার্যকারিতা শীঘ্রই আসছে",
+  "reconsiderSchedule": "পুনর্বিবেচনা করুন এবং সময়সূচী করুন",
+  "registrationType": "নিবন্ধনের ধরন",
+  "rejected": "প্রত্যাখ্যান করা হয়েছে",
+  "rejected_1": "প্রত্যাখ্যান করা হয়েছে",
+  "rememberMe": "আমাকে মনে রাখুন",
+  "reschedule": "পুনরায় সময়সূচী করুন",
+  "rescheduleDate": "পুনরায় সময়সূচীর তারিখ",
+  "rescheduleDeclinedComplaint": "প্রত্যাখ্যান করা অভিযোগ পুনরায় সময়সূচী করুন",
+  "rescheduleFunctionalityComingSoon": "পুনরায় সময়সূচী করার কার্যকারিতা শীঘ্রই আসছে",
+  "rescheduleRequest": "পুনরায় সময়সূচীর অনুরোধ",
+  "rescheduleTime": "পুনরায় সময়সূচীর সময়",
+  "rescheduled": "পুনরায় সময়সূচী করা হয়েছে",
+  "resolutionComments": "সমাধানের মন্তব্যগুলি",
+  "resolved": "সমাধান করা হয়েছে",
+  "resolvedList": "সমাধান করা তালিকা",
+  "resolved_1": "সমাধান করা হয়েছে",
+  "resubmit": "পুনরায় জমা দিন",
+  "resubmitFunctionalityComingSoon": "পুনরায় জমা দেওয়ার কার্যকারিতা শীঘ্রই আসছে",
+  "resubmitted": "পুনরায় জমা দেওয়া হয়েছে",
+  "retry": "পুনরায় চেষ্টা করুন",
+  "scheduleDate": "সময়সূচীর তারিখ:",
+  "scheduleTime": "সময়সূচীর সময়:",
+  "segment": "বিভাগ",
+  "selectAnOption": "একটি বিকল্প নির্বাচন করুন",
+  "selectLanguage": "ভাষা নির্বাচন করুন",
+  "selectedApproval": "নির্বাচিত_অনুমোদন",
+  "sentToLandlord": "মালিকের কাছে পাঠানো হয়েছে",
+  "sentToLandlord_1": "মালিকের কাছে পাঠানো হয়েছে",
+  "sep": "সেপ্টেম্বর",
+  "settings": "সেটিংস",
+  "signInToContinue": "চালিয়ে যেতে সাইন ইন করুন",
+  "solved": "সমাধান করা হয়েছে",
+  "solvedComplaints": "সমাধান করা অভিযোগ",
+  "solved_1": "সমাধান করা হয়েছে",
+  "sourcePermissionDenied": "{source} অনুমতি প্রত্যাখ্যান করা হয়েছে",
+  "stringKey0": "২ দিন আগে",
+  "stringKey1": "৩ দিন আগে",
+  "stringKey10": "🇩🇪",
+  "stringKey11": "🇮🇹",
+  "stringKey12": "🇵🇹",
+  "stringKey13": "আরবি",
+  "stringKey14": "🇸🇦",
+  "stringKey15": "হিন্দি",
+  "stringKey16": "🇮🇳",
+  "stringKey7": "🇺🇸",
+  "stringKey8": "🇪🇸",
+  "stringKey9": "🇫🇷",
+  "submit": "জমা দিন",
+  "submitComplaint": "অভিযোগ জমা দিন",
+  "submitFeedback": "মতামত জমা দিন",
+  "submitRescheduleRequest": "পুনরায় সময়সূচীর অনুরোধ জমা দিন",
+  "successfullyFetchedImagesLengthImages": "সফলভাবে {images}টি ছবি পাওয়া গেছে",
+  "takePhoto": "ছবি তুলুন",
+  "technician": "টেকনিশিয়ান",
+  "technicianAcceptedSuccessfully": "টেকনিশিয়ান সফলভাবে গ্রহণ করা হয়েছে",
+  "technicianAssigned": "টেকনিশিয়ান নির্ধারিত হয়েছে",
+  "technicianAssigned_1": "টেকনিশিয়ান নির্ধারিত হয়েছে",
+  "technicianCubitErrorError": "টেকনিশিয়ান কিউবিট ত্রুটি: {error}",
+  "technicianDataNotAvailablePleaseTryAgain": "টেকনিশিয়ানের তথ্য পাওয়া যায়নি। অনুগ্রহ করে আবার চেষ্টা করুন।",
+  "technicianDetails": "টেকনিশিয়ানের বিবরণ",
+  "technicianName": "টেকনিশিয়ানের নাম:",
+  "technicianRescheduledSuccessfully": "টেকনিশিয়ান সফলভাবে পুনরায় সময়সূচী করা হয়েছে",
+  "tel": "টেলিফোন:",
+  "telCleannumber": "টেলিফোন:{cleanNumber}",
+  "tenant": "ভাড়াটিয়া",
+  "tenantDashboard_1": "ভাড়াটিয়ার ড্যাশবোর্ড",
+  "tenantInfoId": "ভাড়াটিয়ার তথ্য আইডি",
+  "tenantInformation": "ভাড়াটিয়ার তথ্য",
+  "tenantName": "ভাড়াটিয়ার নাম",
+  "tenant_1": "ভাড়াটিয়া",
+  "tenant_2": "ভাড়াটিয়া",
+  "thisComplaintHasBeenDeclinedWhatWouldYouLikeToDo": "এই অভিযোগটি প্রত্যাখ্যান করা হয়েছে। আপনি কি করতে চান?",
+  "thisComplaintHasBeenDeclinedWouldYouLikeToResubmitItWithModifications": "এই অভিযোগটি প্রত্যাখ্যান করা হয়েছে। আপনি কি এটি পরিবর্তন সহ পুনরায় জমা দিতে চান?",
+  "ticket": "টিকিট#",
+  "unexpectedErrorInGetcomplainimagescubitE": "GetComplainImagesCubit-এ অপ্রত্যাশিত ত্রুটি: {e}",
+  "unknownUserTypeUsertype": "অজানা ব্যবহারকারীর ধরন: {userType}",
+  "unnamedSegment": "নামহীন বিভাগ",
+  "updateComplaint": "অভিযোগ আপডেট করুন",
+  "userInfoNotLoadedTryAgain": "ব্যবহারকারীর তথ্য লোড হয়নি। আবার চেষ্টা করুন।",
+  "username": "ব্যবহারকারীর নাম",
+  "version100": "সংস্করণ ১.০.০",
+  "viewProfile": "প্রোফাইল দেখুন",
+  "waterLeakageInBathroom": "বাথরুমে জল ফুটো",
+  "welcome": "স্বাগতম",
+  "writeCommentOrInstructions": "মন্তব্য বা নির্দেশনা লিখুন",
+  "writeYourCommentHere": "আপনার মন্তব্য এখানে লিখুন:",
+  "yearMonthDay": "{year}-{month}-{day}",
+  "yourFeedback": "আপনার মতামত",
+  "yyyyMmDd": "yyyy-MM-dd"
 }
