fix - language: translated msg done

--- a/lib/l10n/app_bn.arb
+++ b/lib/l10n/app_bn.arb
@@ -154,8 +154,8 @@
   "page": "{page}",
   "password": "পাসওয়ার্ড",
   "pending": "মুলতুবিতে রয়েছে",
-  "pendingComplaints": "মुलতুবিতে থাকা অভিযোগসমূহ",
-  "pending_1": "মुलতুবিতে রয়েছে",
+  "pendingComplaints": "মलতুবিতে থাকা অভিযোগসমূহ",
+  "pending_1": "মलতুবিতে রয়েছে",
   "phone": "ফোন",
   "phone_1": "ফোন",
   "pleaseCheckYourConnectionAndTryAgain": "সংযোগ আবার পরীক্ষা করুন ও আবার চেষ্টা করুন",
@@ -206,7 +206,6 @@
   "segment": "অংশ",
   "selectAnOption": "একটি অপশন নির্বাচন করুন",
   "selectLanguage": " ভাষা নির্বাচন করুন",
-  "selectedApproval": "নির্বাচিত অনুমোদন",
   "sentToLandlord": "মালিকের কাছে পাঠানো হয়েছে",
   "sentToLandlord_1": "মালিকের কাছে পাঠানো হয়েছে",
   "settings": "সেটিংস",
@@ -216,7 +215,7 @@
   "solved_1": "সমাধান হয়েছে",
   "sourcePermissionDenied": "{source} অনুমতি দেওয়া হয়নি",
   "submit": "জমা দিন",
-  "submitComplaint": "অभিযোগ জমা দিন",
+  "submitComplaint": "অভিযোগ জমা দিন",
   "submitFeedback": "মতামত জমা দিন",
   "submitRescheduleRequest": "সময়সূচিতে পরিবর্তন করার অনুরোধ জমা দিন",
   "successfullyFetchedImagesLengthImages": "সফলভাবে {images}টি ছবি আনা হয়েছে",
