--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -1,59 +1,58 @@
 {
   "@@locale": "tr",
-
-  "acNotWorkingProperly": "Klima düzgün çalışmıyor",
+  "acNotWorkingProperly": "Klima düzgün çalışmıyor, lütfen kontrol edin.",
   "accept": "Kabul Et",
-  "acceptDeclinedComplaint": "Reddedilen Şikayeti Kabul Et",
-  "acceptFunctionalityComingSoon": "Kabul etme işlevi yakında gelecek",
+  "acceptDeclinedComplaint": "Reddedilen şikayeti kabul et.",
+  "acceptFunctionalityComingSoon": "Kabul etme özelliği yakında gelecek.",
   "acceptTechnician": "Teknisyeni Kabul Et",
-  "acceptedSchedule": "kabul edilen program",
+  "acceptedSchedule": "Kabul edilen plan",
   "acceptedSchedule_1": "Kabul Edilen Program",
   "account": "Hesap",
   "active": "Aktif",
   "addPhotos": "Fotoğraf Ekle",
   "additionalInformation": "Ek Bilgi",
-  "admin": "yönetici",
+  "admin": "Yönetici",
   "agencyId": "Ajans Kimliği",
-  "agent": "ajan",
+  "agent": "Ajan",
   "approvalFailed": "Onay başarısız oldu",
   "approve": "Onayla",
-  "approveComment": "Yorumu Onayla",
+  "approveComment": "Yorumu onayla",
   "approved": "Onaylandı",
   "areYouSureYouWantToLogOutOfYourAccount": "Hesabınızdan çıkış yapmak istediğinizden emin misiniz?",
-  "assignedTechnician": "Atanmış Teknisyen",
-  "attachImages": "Görüntüleri Ekle",
-  "beSpecificAboutTheIssueForFasterResolution": "Daha hızlı çözüm için sorun hakkında spesifik olun",
+  "assignedTechnician": "Atanan teknisyen",
+  "attachImages": "Görüntüleri ekle",
+  "beSpecificAboutTheIssueForFasterResolution": "Sorunu net bir şekilde açıklayın, böylece daha hızlı çözülebilir.",
   "camera": "Kamera",
-  "cancel": "İptal",
+  "cancel": "İptal Et",
   "cancel_1": "İPTAL",
-  "cannotCompleteDeclinedComplaintsPleaseReconsiderFirst": "Reddedilen şikayetler tamamlanamaz. Lütfen önce yeniden değerlendirin.",
+  "cannotCompleteDeclinedComplaintsPleaseReconsiderFirst": "Reddedilen şikayetler tamamlanamaz. Lütfen önce yeniden gözden geçirin.",
   "cannotEditSolvedComplaints": "Çözülmüş şikayetler düzenlenemez",
   "cannotFetchComplaintsTenantidIsNullOrEmpty": "Şikayetler alınamıyor: tenantID boş veya null",
   "cannotRescheduleSolvedComplaints": "Çözülmüş şikayetler yeniden planlanamaz",
   "cannotResubmitSolvedComplaints": "Çözülmüş şikayetler yeniden gönderilemez",
-  "chooseFromGallery": "Galeriden Seç",
-  "clearAll": "Tümünü temizle",
+  "chooseFromGallery": "Galeriden seçin",
+  "clearAll": "Hepsini temizle",
   "close": "Kapat",
-  "code": "kod",
-  "comment": "Yorum",
-  "commentIsRequired": "Yorum Gerekli",
-  "commentText": "yorum metni...",
+  "code": "Kod",
+  "comment": "Yorum yap",
+  "commentIsRequired": "Yorum yapmak zorunludur",
+  "commentText": "Yorum metni...",
   "complaintApprovedSuccessfully": "Şikayet başarıyla onaylandı",
-  "complaintCreated": "Şikayet Oluşturuldu",
-  "complaintDeclined": "Şikayet Reddedildi",
+  "complaintCreated": "Şikayet başarıyla oluşturuldu",
+  "complaintDeclined": "Şikayet reddedildi",
   "complaintDeclinedSuccessfully": "Şikayet başarıyla reddedildi",
   "complaintDetails": "Şikayet Detayları",
   "complaintHistory": "Şikayet Geçmişi",
   "complaintIsAlreadyAcceptedAndSolved": "Şikayet zaten kabul edildi ve çözüldü",
   "complaintIsAlreadyCompleted": "Şikayet zaten tamamlandı",
   "complaintMarkedAsComplete": "Şikayet tamamlandı olarak işaretlendi",
-  "complaintResolved": "Şikayet Çözüldü",
-  "complaintResubmitted": "şikayet yeniden gönderildi",
+  "complaintResolved": "Şikayet çözüldü",
+  "complaintResubmitted": "Şikayet yeniden gönderildi",
   "complaintSubmittedSuccessfully": "Şikayet başarıyla gönderildi",
   "complaintsList": "Şikayet Listesi",
   "complete": "Tamamla",
-  "completeFunctionalityComingSoon": "Tamamlama işlevi yakında gelecek",
-  "completed": "tamamlandı",
+  "completeFunctionalityComingSoon": "Tamamlama özelliği yakında gelecek",
+  "completed": "Tamamlandı",
   "completed_1": "Tamamlandı",
   "confirmLogout": "Çıkışı Onayla",
   "contactInformation": "İletişim Bilgileri",
@@ -63,7 +62,7 @@
   "declineComment": "Reddetme Yorumu",
   "declineReason": "Reddetme Nedeni",
   "declineRequestFailed": "Reddetme isteği başarısız oldu",
-  "declined": "REDDEDİLDİ",
+  "declined": "Reddedildi",
   "declinedComplaintAction": "Reddedilen Şikayet Eylemi",
   "declinedComplaints": "Reddedilen Şikayetler",
   "declinedList": "Reddedilen Liste",
@@ -74,14 +73,14 @@
   "doYouWantToReconsiderThisComplaintAndScheduleIt": "Bu şikayeti yeniden değerlendirip planlamak istiyor musunuz?",
   "edit": "Düzenle",
   "editDeclinedComplaint": "Reddedilen Şikayeti Düzenle",
-  "editFunctionalityForLandlordComingSoon": "Ev sahibi için düzenleme işlevi yakında gelecek",
+  "editFunctionalityForLandlordComingSoon": "Ev sahibi için düzenleme özelliği yakında gelecek",
   "email": "E-posta",
   "email_1": "E-posta:",
   "enterTextHere": "Metni buraya girin...",
   "failedToDetermineUserTypePleaseTryLoggingInAgain": "Kullanıcı türü belirlenemedi. Lütfen tekrar giriş yapmayı deneyin.",
   "failedToLoadTechnicianInformation": "Teknisyen bilgisi yüklenemedi",
   "feedbackIsRequired": "Geri bildirim gerekli",
-  "flag": "bayrak",
+  "flag": "Bayrak",
   "forgotPassword": "Şifrenizi mi unuttunuz?",
   "gallery": "Galeri",
   "gettingTechnicianInfo": "Teknisyen bilgisi alınıyor...",
@@ -92,7 +91,7 @@
   "home": "Ana Sayfa",
   "imageGalleryComplaintImagecount": "Resim Galerisi ({imageCount})",
   "imageLoadingCancelled": "Resim yükleme iptal edildi",
-  "inProgress": "devam ediyor",
+  "inProgress": "Devam ediyor",
   "inactive": "Pasif",
   "initialImages": "Başlangıç görüntüleri",
   "invalidTime": "Geçersiz Zaman",
@@ -104,7 +103,7 @@
   "landlordInformation": "Ev Sahibi Bilgisi",
   "landlordName": "Ev Sahibi Adı",
   "landlord_1": "EV SAHİBİ",
-  "landlordidIsNullOrEmptyCannotFetchComplaints": "EvSahibiID boş veya null, şikayetler alınamıyor",
+  "landlordidIsNullOrEmptyCannotFetchComplaints": "Ev Sahibi ID boş veya null, şikayetler alınamıyor",
   "language": "Dil",
   "lastComment": "Son Yorum",
   "lastCommentDetails": "Son Yorum Detayları",
@@ -116,7 +115,7 @@
   "loadingPendingComplaints": "Bekleyen Şikayetler Yükleniyor...",
   "loadingSolvedComplaints": "Çözülmüş Şikayetler Yükleniyor...",
   "loadingUserInfo": "Kullanıcı Bilgisi Yükleniyor...",
-  "login": "GİRİŞ YAP",
+  "login": "Giriş Yap",
   "loginInProgress": "Giriş yapılıyor...",
   "loginSuccessful": "Giriş başarılı!",
   "loginSuccessfulButFailedToLoadDashboardE": "Giriş başarılı ancak pano yüklenemedi: {e}",
@@ -126,7 +125,7 @@
   "maintenanceScheduled": "Bakım Planlandı",
   "markAsComplete": "Tamamlandı Olarak İşaretle",
   "nA": "Uygulanamaz",
-  "name": "isim",
+  "name": "İsim",
   "navigatingToLandlordDashboard": "Ev Sahibi Panosuna Yönlendiriliyor",
   "navigatingToTenantDashboard": "Kiracı Panosuna Yönlendiriliyor",
   "newComplaint": "Yeni Şikayet",
@@ -153,7 +152,7 @@
   "onlyAddedImagestoaddLengthImagesMaximumLimitReached": "Sadece {length} resim eklendi. Maksimum sınıra ulaşıldı.",
   "page": "{page}",
   "password": "Şifre",
-  "pending": "beklemede",
+  "pending": "Beklemede",
   "pendingComplaints": "Bekleyen Şikayetler",
   "pending_1": "Beklemede",
   "phone": "Telefon",
@@ -180,40 +179,39 @@
   "recentActivity": "Son Etkinlikler",
   "reconsider": "Yeniden Değerlendir",
   "reconsiderAccept": "Yeniden Değerlendir ve Kabul Et",
-  "reconsiderFunctionalityComingSoon": "Yeniden değerlendirme işlevi yakında gelecek",
+  "reconsiderFunctionalityComingSoon": "Yeniden değerlendirme özelliği yakında gelecek",
   "reconsiderSchedule": "Yeniden Değerlendir ve Planla",
   "registrationType": "Kayıt Türü",
-  "rejected": "reddedildi",
+  "rejected": "Reddedildi",
   "rejected_1": "Reddedildi",
   "rememberMe": "Beni Hatırla",
   "reschedule": "Yeniden Planla",
   "rescheduleDate": "Yeniden Planlama Tarihi",
   "rescheduleDeclinedComplaint": "Reddedilen Şikayeti Yeniden Planla",
-  "rescheduleFunctionalityComingSoon": "Yeniden planlama işlevi yakında gelecek",
+  "rescheduleFunctionalityComingSoon": "Yeniden planlama özelliği yakında gelecek",
   "rescheduleRequest": "Yeniden Planlama İsteği",
   "rescheduleTime": "Yeniden Planlama Zamanı",
-  "rescheduled": "yeniden planlandı",
+  "rescheduled": "Yeniden Planlandı",
   "resolutionComments": "Çözüm Yorumları",
   "resolved": "Çözüldü",
   "resolvedList": "Çözülen Liste",
-  "resolved_1": "çözüldü",
+  "resolved_1": "Çözüldü",
   "resubmit": "Yeniden Gönder",
-  "resubmitFunctionalityComingSoon": "Yeniden gönderme işlevi yakında gelecek",
-  "resubmitted": "yeniden gönderildi",
+  "resubmitFunctionalityComingSoon": "Yeniden gönderme özelliği yakında gelecek",
+  "resubmitted": "Yeniden gönderildi",
   "retry": "Yeniden Dene",
   "scheduleDate": "Planlama Tarihi:",
   "scheduleTime": "Planlama Zamanı:",
   "segment": "Segment",
   "selectAnOption": "Bir seçenek seçin",
   "selectLanguage": "Dil Seçin",
-  "selectedApproval": "Seçilen_Onay",
-  "sentToLandlord": "ev sahibine gönderildi",
+  "sentToLandlord": "Ev Sahibine Gönderildi",
   "sentToLandlord_1": "Ev Sahibine Gönderildi",
   "settings": "Ayarlar",
   "signInToContinue": "Devam etmek için giriş yapın",
-  "solved": "ÇÖZÜLDÜ",
+  "solved": "Çözüldü",
   "solvedComplaints": "Çözülen Şikayetler",
-  "solved_1": "çözüldü",
+  "solved_1": "Çözüldü",
   "sourcePermissionDenied": "{source} izni reddedildi",
   "submit": "GÖNDER",
   "submitComplaint": "ŞİKAYET GÖNDER",
@@ -221,29 +219,29 @@
   "submitRescheduleRequest": "Yeniden Planlama İsteği Gönder",
   "successfullyFetchedImagesLengthImages": "Başarıyla {images} resim alındı",
   "takePhoto": "Fotoğraf Çek",
-  "technician": "teknisyen",
+  "technician": "Teknisyen",
   "technicianAcceptedSuccessfully": "Teknisyen başarıyla kabul edildi",
-  "technicianAssigned": "teknisyen atandı",
+  "technicianAssigned": "Teknisyen Atandı",
   "technicianAssigned_1": "Teknisyen Atandı",
   "technicianDataNotAvailablePleaseTryAgain": "Teknisyen verisi mevcut değil. Lütfen tekrar deneyin.",
   "technicianDetails": "Teknisyen Detayları",
   "technicianName": "Teknisyen Adı:",
   "technicianRescheduledSuccessfully": "Teknisyen başarıyla yeniden planlandı",
-  "tel": "tel:",
-  "telCleannumber": "tel:{cleanNumber}",
+  "tel": "Tel:",
+  "telCleannumber": "Tel:{cleanNumber}",
   "tenant": "Kiracı",
   "tenantDashboard_1": "Kiracı Panosu",
   "tenantInfoId": "Kiracı Bilgi Kimliği",
   "tenantInformation": "Kiracı Bilgisi",
   "tenantName": "Kiracı Adı",
   "tenant_1": "KİRACI",
-  "tenant_2": "kiracı",
+  "tenant_2": "Kiracı",
   "thisComplaintHasBeenDeclinedWhatWouldYouLikeToDo": "Bu şikayet reddedildi. Ne yapmak istersiniz?",
   "thisComplaintHasBeenDeclinedWouldYouLikeToResubmitItWithModifications": "Bu şikayet reddedildi. Değişikliklerle yeniden göndermek ister misiniz?",
   "ticket": "Bilet#",
   "unnamedSegment": "İsimsiz Segment",
-  "updateComplaint": "ŞİKAYETİ GÜNCELLE",
-  "userInfoNotLoadedTryAgain": "Kullanıcı bilgisi yüklenmedi. Tekrar deneyin.",
+  "updateComplaint": "Şikayeti Güncelle",
+  "userInfoNotLoadedTryAgain": "Kullanıcı bilgisi yüklenmedi. Lütfen tekrar deneyin.",
   "username": "Kullanıcı Adı",
   "viewProfile": "Profili Görüntüle",
   "waterLeakageInBathroom": "Banyoda su sızıntısı",
