refact - technician accept resch:language

--- a/lib/l10n/app_bn.arb
+++ b/lib/l10n/app_bn.arb
@@ -188,6 +188,7 @@
   "reschedule": "পুনঃনির্ধারণ করুন",
   "rescheduleDate": "পুনঃনির্ধারণ তারিখ",
   "rescheduleDeclinedComplaint": "অস্বীকৃত অভিযোগ পুনঃনির্ধারণ করুন",
+  "resubmitComplaint": "অভিযোগ পুনরায় জমা দিন",
   "rescheduleFunctionalityComingSoon": "পুনঃনির্ধারণ বৈশিষ্ট্য শীঘ্রই আসবে",
   "rescheduleRequest": "পুনঃনির্ধারণ অনুরোধ",
   "rescheduleTime": "পুনঃনির্ধারণ সময়",
@@ -198,6 +199,9 @@
   "resolved_1": "সমাধান হয়েছে",
   "resubmit": "পুনঃজমা করুন",
   "resubmitFunctionalityComingSoon": "পুনঃজমা বৈশিষ্ট্য শীঘ্রই আসবে",
+  "mentionMissingOrUnclear": "আপনার অভিযোগ যা অনুপস্থিত বা অস্বচ্ছ ছিল তা উল্লেখ করুন",
+  "originalComment": "মূল মন্তব্য:",
+  "resubmissionFailed": "পুনরায় জমা দেওয়া ব্যর্থ হয়েছে",
   "resubmitted": "পুনঃজমা হয়েছে",
   "retry": "পুনরায় চেষ্টা করুন",
   "scheduleDate": "সময়সূচী তারিখ:",
