--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -193,10 +193,14 @@
   "rescheduleTime": "Yeniden Planlama Zamanı",
   "rescheduled": "Yeniden Planlandı",
   "resolutionComments": "Çözüm Yorumları",
+  "mentionMissingOrUnclear": "Son şikayetinizde eksik veya belirsiz olanı belirtin",
+  "originalComment": "Orijinal Yorum:",
+  "resubmissionFailed": "Yeniden gönderim başarısız oldu",
   "resolved": "Çözüldü",
   "resolvedList": "Çözülen Liste",
   "resolved_1": "Çözüldü",
   "resubmit": "Yeniden Gönder",
+  "resubmitComplaint": "Şikayeti Yeniden Gönder",
   "resubmitFunctionalityComingSoon": "Yeniden gönderme özelliği yakında gelecek",
   "resubmitted": "Yeniden gönderildi",
   "retry": "Yeniden Dene",
