refact - history:language change

--- a/lib/l10n/app_bn.arb
+++ b/lib/l10n/app_bn.arb
@@ -13,7 +13,7 @@
   "additionalInformation": "অতিরিক্ত তথ্য",
   "admin": "প্রশাসক",
   "agencyId": "এজেন্সি আইডি",
-  "agent": "এজেন্ট",
+  "agency": "এজেন্ট",
   "approvalFailed": "অনুমোদন ব্যর্থ হয়েছে",
   "approve": "অনুমোদন করুন",
   "approveComment": "মন্তব্য অনুমোদন করুন",
