--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -56,7 +56,7 @@
     "description": "Localized string"
   },
 
-  "agent": "agent",
+  "agency": "Agency",
   "@agent": {
     "description": "Localized string"
   },
