--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -13,7 +13,7 @@
   "additionalInformation": "Ek Bilgi",
   "admin": "Yönetici",
   "agencyId": "Ajans Kimliği",
-  "agent": "Ajan",
+  "agency": "Ajan",
   "approvalFailed": "Onay başarısız oldu",
   "approve": "Onayla",
   "approveComment": "Yorumu onayla",
